[package]
name = "megaverse-builder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
num = "0.4.1"
ranges = "0.3.3"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
shadow-clone = "1.2.1"
